--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           <section class="education" id="education">
             <h2>Education & courses (IT only)</h2>
             <ul class="education__list">
-              <li class="education__list_item"><b>2021</b> - Self-education (html, css, js basics)</li>
+              <li class="education__list_item"><b>2021-2022</b> - Self-education (html, css, js basics, react, vue, bootstrap, git)</li>
               <li class="education__list_item"><b>2021</b> - Web Hero School - Frontend Developer junior (html, css, js, react)</li>
               <li class="education__list_item"><b>2021-2022</b> - RS School Stage 0 - Frontend Developer junior (html, css, js basics)</li>
             </ul>
