--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="assets/ico/favicon.ico" type="image/x-icon">
   <meta property="og:title" content="Lina Kazakova">
   <meta property="og:description" content="My resume">
@@ -24,43 +25,7 @@
   <div id="upbutton" class="upbutton">
     <a class="btn-up" href="#" onclick="smoothJumpUp(); return false;">up▲</a>
   </div>
-  <div class="wrap">
-    <!-- <header class="header">
-      <nav class="menu">
-        <ul class="menu-list">
-          <li class="menu-item">
-            <a href="#contacts" target="_self">Contacts</a>
-          </li>
-          <li class="menu-item">
-            <a href="#about" target="_self">Summary</a>
-          </li>
-          <li class="menu-item">
-            <a href="#skills" target="_self">Skills</a>
-          </li>
-          <li class="menu-item">
-            <a href="#education" target="_self">Education</a>
-          </li>
-          <li class="menu-item">
-            <a href="#projects" target="_self">Pet-projects</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="menu-burger">
-        <input id="menu-burger__toggle" type="checkbox"/>
-        <label for="menu-burger__toggle" class="menu-burger__btn">
-        <span></span>
-        </label>
-          <div class="menu-burger__box">
-            <ul>
-              <li class="menu-burger__item"><a href="#contacts" target="_self">Contacts</a></li>
-              <li class="menu-burger__item"><a href="#about">Summary</a></li>
-              <li class="menu-burger__item"><a href="#skills">Skills</a></li>
-              <li class="menu-burger__item"><a href="#education">Education</a></li>
-              <li class="menu-burger__item"><a href="#projects">Pet-project</a></li>
-            </ul>
-          </div>
-      </div>
-    </header> -->
+  <div class="wrapper">
     <main class="main">
       <div class="left-section">
         <section class="title">
@@ -68,9 +33,9 @@
           <h1 class="title__name">Lina Kazakova</h1>
           <h3 class="title__profession">Frontend-developer junior</h3> -->
         </section>
-        <section class="skills" id="skills">
-          <h2>Skills</h2>
-          <ul class="skills__list">
+        <section class="skills section" id="skills">
+          <h2 class="skills__title section-title">Skills</h2>
+          <ul class="skills__list section-list list-reset">
             <li class="skills__list_item">
               <img alt="HTML5" width="26" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" />&nbsp;
               HTML5
@@ -217,18 +182,18 @@
             </li>
           </ul>
         </section>
-        <section class="contacts" id="contacts">
-          <h2>Contacts</h2>
+        <section class="contacts section" id="contacts">
+          <h2 class="contacts__title section-title">Contacts</h2>
           <div class="contact-links">
-            <ul class="contacts-list">
-              <li>Location:&nbsp;<b>Tomsk, Russia</b></li>
-              <li>Phone:&nbsp;<a href="tel:+79528905500"><b>+79528905500</b></a></li>
-              <li>E-mail:&nbsp;<b>ryuminaen@gmail.com</b></li>
+            <ul class="contacts-list section-list list-reset">
+              <li class="contacts-list__item">Location:&nbsp;<b>Tomsk, Russia</b></li>
+              <li class="contacts-list__item">Phone:&nbsp;<a href="tel:+79528905500"><b>+79528905500</b></a></li>
+              <!-- <li>E-mail:&nbsp;<b>ryuminaen@gmail.com</b></li> -->
             </ul>
-            <ul class="connect">
-              <li class="connect-item">
+            <ul class="connect list-reset">
+              <!-- <li class="connect-item">
                 <a href="https://github.com/EllieOllie"><i class="fab fa-github-alt"></i></a>
-              </li>
+              </li> -->
               <li class="connect-item">
                 <a href="https://t.me/ellie_Ooo"><i class="fab fa-telegram-plane"></i></a>
               </li>
@@ -241,128 +206,119 @@
       </div>
       <div class="right-section">
         <div class="gradient">
-          <section class="goal">
-            <h2 class="goal__title">&lt;CAREER GOAL&gt;</h2>
+          <section class="goal section">
+            <h2 class="goal__title section-title">&lt;CAREER GOAL&gt;</h2>
             <p class="goal__text">To get and improve knowledge in frontend development and get offer to work</p>
           </section>
-          <section class="about" id="about">
-            <h2>About me</h2>
+          <section class="about section" id="about">
+            <h2 class="about__title section-title">About me</h2>
             <div class="about-text">
-              <p>I have no production experience as a frontend developer, but I want to devote my time to web development.</p>
-              <p>I <b>have the abilities</b> that will come useful in any job. My previous work (as a leading geologist) consisted of making projects and reports, <b>creating</b> graphic material, <b>communicating</b> with the customers.</p>
-              <p>For many years I have been fond of photography and drawing - hence my knowledge of graphic editors. <b>I love to create beautiful!</b>.</p>
-              <p>Without any knowledge in web development, <b>I mastered</b> the basics of html, css, JS and React during 7 months in 2021. <b>I have done 4 projects</b> and now I am working on another two using the java script and react.</p>
-              <p>I have the skills of <b>self-study</b>, <b>perseverance</b>, quick search for information and errors, I like to <b>analyze data and solve</b> unusual tasks.</p>
+              <p class="about-text__paragraph">I have no production experience as a frontend developer, but I want to devote my time to web development.</p>
+              <p class="about-text__paragraph">I <b>have the abilities</b> that will come useful in any job. My previous work (as a leading geologist) consisted of making projects and reports, <b>creating</b> graphic material, <b>communicating</b> with the customers.</p>
+              <p class="about-text__paragraph">For many years I have been fond of photography and drawing - hence my knowledge of graphic editors. <b>I love to create beautiful!</b>.</p>
+              <p class="about-text__paragraph">Without any knowledge in web development, <b>I mastered</b> the basics of html, css, JS and React during 7 months in 2021. <b>I have done 4 projects</b> and now I am working on another two using the java script and react.</p>
+              <p class="about-text__paragraph">I have the skills of <b>self-study</b>, <b>perseverance</b>, quick search for information and errors, I like to <b>analyze data and solve</b> unusual tasks.</p>
             </div>
           </section>
-          <section class="education" id="education">
-            <h2>Education & courses (IT only)</h2>
-            <ul class="education__list">
-              <li class="education__list_item"><b>2021-2022</b> - Self-education (html, css, js basics, react, vue, bootstrap, git)</li>
-              <li class="education__list_item"><b>2021</b> - Web Hero School - Frontend Developer junior (html, css, js, react)</li>
-              <li class="education__list_item"><b>2021-2022</b> - RS School Stage 0 - Frontend Developer junior (html, css, js basics)</li>
+          <section class="education section" id="education">
+            <h2 class="education__title section-title">Education & courses (IT only)</h2>
+            <ul class="education__list section-list list-reset">
+              <li class="education__list_item list-indent"><b>2021-2022</b> - Self-education (html, css, js, react, vue, bootstrap, git)</li>
+              <li class="education__list_item list-indent"><b>2021</b> - Web Hero School - Frontend Developer junior (html, css, js, react)</li>
+              <li class="education__list_item list-indent"><b>2021-2022</b> - RS School Stage 0 - Frontend Developer junior (html, css, js basics)</li>
             </ul>
           </section>
-          <section class="projects" id="projects">
-            <h2>Pet-projects:</h2>
-            <h4>All my projects are adapted for mobile devices.</h4>
-              <ul class="container-projects-slide">
-                <li class="slide" style="background-image: url(assets/img/portfolio.png);">
-                    <a href="https://ellieollie.github.io/App.creation/">
-                      <h4>Portfolio landing-page (html, css, JS)</h4>
-                    </a>
-                </li>
-                <li class="slide" style="background-image: url(assets/img/memory-game.png);">
-                  <a href="https://ellieollie.github.io/Memory-game/">
-                    <h4>Memory game (JS)</h4>
+          <section class="projects section" id="projects">
+            <h2 class="projects__title section-title">Pet-projects:</h2>
+            <p class="projects__text">All my projects are adapted for mobile devices.</p>
+            <ul class="container-projects-slide list-reset">
+              <li class="slide" style="background-image: url(assets/img/portfolio.png);">
+                  <a href="https://ellieollie.github.io/App.creation/">
+                    <h4 class="slide__title">Portfolio landing-page (html, css, JS)</h4>
                   </a>
-                </li>
-                <li class="slide" style="background-image: url(assets/img/tesla.jpg);">
-                  <a href="https://ellieollie.github.io/Tesla/">
-                    <h4>Tesla landing-page (html, css)</h4>
+              </li>
+              <li class="slide" style="background-image: url(assets/img/memory-game.png);">
+                <a href="https://ellieollie.github.io/Memory-game/">
+                  <h4 class="slide__title">Memory game (JS)</h4>
+                </a>
+              </li>
+              <li class="slide" style="background-image: url(assets/img/buggame.jpg);">
+                <a href="https://ellieollie.github.io/Find_the_bug/">
+                  <h4 class="slide__title">"Find the bug" game (JS)</h4>
+                </a>
+              </li>
+              <li class="slide active" style="background-image: url(assets/img/todo.jpg);">
+                <a href="https://ellieollie.github.io/To-do/">
+                  <h4 class="slide__title">"To-do list" application (react)</h4>
+                </a>
+              </li>
+              <li class="slide" style="background-image: url(assets/img/weather.png);">
+                <a href="https://ellieollie.github.io/Weather_app/">
+                  <h4 class="slide__title">"Weather & Unsplash" app (Vue)</h4>
+                </a>
+              </li>
+            </ul>
+            <ul class="container-projects">
+              <li class="project">
+                  <a href="https://ellieollie.github.io/Portfolio/portfolio/">
+                    <div class="project-img" style="background-image: url(assets/img/portfolio.png);"></div>
+                    <h4 class="project__title">Portfolio landing-page</h4><span>HTML, CSS, JS</span>
                   </a>
-                </li>
-                <li class="slide" style="background-image: url(assets/img/buggame.jpg);">
-                  <a href="https://ellieollie.github.io/Find_the_bug/">
-                    <h4>"Find the bug" game (JS)</h4>
-                  </a>
-                </li>
-                <li class="slide active" style="background-image: url(assets/img/todo.jpg);">
-                  <a href="https://ellieollie.github.io/To-do/">
-                    <h4>"To-do list" application (react)</h4>
-                  </a>
-                </li>
-                <li class="slide" style="background-image: url(assets/img/weather.png);">
-                  <a href="https://ellieollie.github.io/Weather_app/">
-                    <h4>"Weather & Unsplash" app (Vue)</h4>
-                  </a>
-                </li>
-              </ul>
-              <ul class="container-projects">
-                <li class="project">
-                    <a href="https://ellieollie.github.io/Portfolio/portfolio/">
-                      <div class="project-img" style="background-image: url(assets/img/portfolio.png);"></div>
-                      <h4>Portfolio landing-page</h4><span>HTML, CSS, JS</span>
-                    </a>
-                </li>
-                <li class="project">
-                  <a href="https://ellieollie.github.io/Memory-game/">
-                    <div class="project-img" style="background-image: url(assets/img/memory-game.png);"></div>
-                    <h4>Memory game</h4><span>Java Script</span>
-                  </a>
-                </li>
-                <li class="project">
-                  <a href="https://ellieollie.github.io/Tesla/">
-                    <div class="project-img" style="background-image: url(assets/img/tesla.jpg);"></div>
-                    <h4>Tesla landing-page</h4><span>HTML, CSS</span>
-                  </a>
-                </li>
-                <li class="project">
-                  <a href="https://ellieollie.github.io/Find_the_bug/">
-                    <div class="project-img" style="background-image: url(assets/img/buggame.jpg);"></div>
-                    <h4>"Find the bug" game</h4><span>HTML, CSS, Java Script</span>
-                  </a>
-                </li>
-                <li class="project">
-                  <a href="https://ellieollie.github.io/To-do/">
-                    <div class="project-img" style="background-image: url(assets/img/todo.jpg);"></div>
-                    <h4>"To-do list" application</h4><span>React, MUI</span>
-                  </a>
-                </li>
-                <li class="project">
-                  <a href="https://ellieollie.github.io/Weather_app/">
-                    <div class="project-img" style="background-image: url(assets/img/weather.png);"></div>
-                    <h4>"Weather & Unsplash" app</h4><span>Vue (test-task)</span>
-                  </a>
-                </li>
-              </ul>
-          </section>
-          <section class="lang" id="lang">
-            <h2>Languages</h2>
-            <ul class="lang__list">
-              <li class="lang__list_item"><b>Russian</b> - native</li>
-              <li class="lang__list_item"><b>English</b> - A2 &#8594; B1 (in progress)</li>
+              </li>
+              <li class="project">
+                <a href="https://ellieollie.github.io/Memory-game/">
+                  <div class="project-img" style="background-image: url(assets/img/memory-game.png);"></div>
+                  <h4 class="project__title">Memory game</h4><span>Java Script</span>
+                </a>
+              </li>
+              <li class="project">
+                <a href="https://ellieollie.github.io/Find_the_bug/">
+                  <div class="project-img" style="background-image: url(assets/img/buggame.jpg);"></div>
+                  <h4 class="project__title">"Find the bug" game</h4><span>HTML, CSS, Java Script</span>
+                </a>
+              </li>
+              <li class="project">
+                <a href="https://ellieollie.github.io/To-do/">
+                  <div class="project-img" style="background-image: url(assets/img/todo.jpg);"></div>
+                  <h4 class="project__title">"To-do list" application</h4><span>React, MUI</span>
+                </a>
+              </li>
+              <li class="project">
+                <a href="https://ellieollie.github.io/Weather_app/">
+                  <div class="project-img" style="background-image: url(assets/img/weather.png);"></div>
+                  <h4 class="project__title">"Weather & Unsplash" app</h4><span>Vue (test-task)</span>
+                </a>
+              </li>
             </ul>
           </section>
-          <section class="hobbies" id="hobbies">
-            <h2>Hobbies</h2>
-            <ul class="hobbies__list">
-              <li class="hobbies__list_item">Spare my time active (snowboarding, skies, mountain bike, hiking and walking outdoor).</li>
-              <li class="hobbies__list_item">Keen on photography. I spent a lot of time to study of photography.</li>
-              <li class="hobbies__list_item">Enjoy reading nonfiction literature.</li>
-              <li class="hobbies__list_item">Really into html/css coding by perfect pixel and solving codewars katas.</li>
-              <li class="hobbies__list_item">Addicted to yoga.</li>
-              <li class="hobbies__list_item">Like to bake goodies.</li>
+          <section class="lang section" id="lang">
+            <h2 class="lang__title section-title">Languages</h2>
+            <ul class="lang__list section-list list-reset">
+              <li class="lang__list_item list-indent"><b>Russian</b> - native</li>
+              <li class="lang__list_item list-indent"><b>English</b> - A2 &#8594; B1 (in progress)</li>
+            </ul>
+          </section>
+          <section class="hobbies section" id="hobbies">
+            <h2 class="hobbies__title section-title">Hobbies</h2>
+            <ul class="hobbies__list section-list list-reset">
+              <li class="hobbies__list_item list-indent">Spare my time active (snowboarding, skies, mountain bike, hiking and walking outdoor).</li>
+              <li class="hobbies__list_item list-indent">Keen on photography. I spent a lot of time to study of photography.</li>
+              <li class="hobbies__list_item list-indent">Enjoy reading nonfiction literature.</li>
+              <li class="hobbies__list_item list-indent">Really into html/css coding by perfect pixel and solving codewars katas.</li>
+              <li class="hobbies__list_item list-indent">Addicted to yoga.</li>
+              <li class="hobbies__list_item list-indent">Like to bake goodies.</li>
             </ul>
           </section>
         </div>
       </div>
     </main>
     <footer class="footer">
-      <!-- <a href="https://rs.school/js/">
-        <img class="rss-logo" src="assets/svg/rs_school_js.svg" alt="rss">
-      </a> -->
-      <span>© <a href="https://github.com/EllieOllie">ElliOllie</a></span>
+      <div class="footer-container">
+        <!-- <a class="footer-link" href="https://rs.school/js/">
+          <img src="assets/svg/rs_school_js.svg" alt="rss" width="100">
+        </a> -->
+        <a class="footer-link" href="https://github.com/EllieOllie">©&nbsp;ElliOllie&nbsp;2022</a>
+      </div>
     </footer>
   </div>
 <script src="script.js"></script>
